tests/NormalTests/paczka1/small_fuzzy/85208455.err
Error in line 1: nK92aN S353 10,1
Error in line 2: nK92aN S49 73,0
Error in line 3: nK92aN A141 47,7
Error in line 11: S49 S49 55,05
Error in line 8: nK92aN S353 54,9
